tests/errors/const_assign.c
int main()
{
	const int x = 10;
	x = 1;
}